# stellar-creator-portfolio

./: .dockerignore  .env  .env.example  .gitignore  .gitleaks.toml  ANALYSIS_DELIVERABLES.md  ARCHITECTURE.md  COMMIT_MESSAGE.md  COMPLETION_REPORT.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  COPYABLE_PR_TEMPLATE.txt  CRITICAL_ISSUES_AND_NEXT_STEPS.md  DEADLOCK_FIX_SUMMARY.md  DEADLOCK_SOLUTION_OVERVIEW.md  DOCUMENTATION_INDEX.md  Dockerfile.app  ENCRYPTION_KEY_VALIDATION.md  ERROR_TRACKING_FILES.txt  ERROR_TRACKING_IMPLEMENTATION_SUMMARY.md  ERROR_TRACKING_INDEX.md  ERROR_TRACKING_MIGRATION_GUIDE.md  ERROR_TRACKING_QUICKSTART.md  ERROR_TRACKING_README.md  ERROR_TRACKING_SETUP.md  ERROR_TRACKING_VERIFICATION.md  FILE_STRUCTURE.md  FINAL_STATUS.md  FIX_PROPOSAL.md  FRONTEND_ANALYSIS_SUMMARY.md  FRONTEND_ENHANCEMENTS_REPORT.md  FRONTEND_ISSUES_ANALYSIS.md  HOOK_INTEGRATION_EXAMPLE.md  HOVER_EFFECTS_AND_VISUALS_SUMMARY.md  HYDRATION_FIX_SUMMARY.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_INDEX.md  IMPLEMENTATION_NOTES.md  (+73 more)
backend/: .env.example  .gitignore  Cargo.toml  DEVELOPMENT.md  README.md  docker-compose.yml
backend/contracts/bounty/: Cargo.toml
backend/contracts/bounty/src/: lib.rs  tests.rs
backend/contracts/bounty/test_snapshots/tests/: test_apply_after_deadline.1.json  test_apply_for_bounty.1.json  test_completion_workflow.1.json  test_create_bounty.1.json  test_create_bounty_deadline_in_past.1.json  test_create_bounty_negative_budget.1.json  test_create_bounty_requires_governance_contract.1.json  test_duplicate_dispute_not_allowed.1.json  test_expire_bounty_before_deadline.1.json  test_expire_completed_bounty.1.json  test_expire_in_progress_bounty.1.json  test_expire_open_bounty.1.json  test_get_bounty_applications_pagination.1.json  test_initiate_dispute_by_creator.1.json  (+8 more)
backend/contracts/core/: Cargo.toml
backend/contracts/core/src/: fee.rs  lib.rs
backend/contracts/escrow/: Cargo.toml
backend/contracts/escrow/src/: fuzz_tests.rs  lib.rs  reentrancy.rs
backend/contracts/freelancer/: Cargo.toml
backend/contracts/freelancer/src/: event_tests.rs  lib.rs
backend/contracts/governance/: Cargo.toml
backend/contracts/governance/src/: lib.rs  tests.rs
backend/contracts/identity/: Cargo.toml
backend/contracts/identity/src/: lib.rs  test.rs
backend/contracts/oracle/: Cargo.toml
backend/contracts/oracle/src/: lib.rs
backend/contracts/referral/: Cargo.toml
backend/contracts/referral/src/: lib.rs
backend/contracts/stellar_insights/: Cargo.toml
backend/contracts/stellar_insights/src/: lib.rs
backend/contracts/test-utils/: Cargo.toml
backend/contracts/test-utils/src/: lib.rs
backend/grafana/: dashboard.json
backend/limit/: .env.example  DELIVERY_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  SECURITY_GUIDE.md  endpoints.ts  index.ts  package.json  setup.sh  tsconfig.json
backend/limit/app/api/: middleware.ts
backend/limit/lib/: api-monitoring.ts  config.ts  security.ts
backend/limit/middleware/: rate-limit.ts
backend/limit/routes/: estimate.ts
backend/limit/tests/: runner.ts
backend/limit/tests/e2e/: api-abuse.test.ts
backend/limit/tests/integration/: security.test.ts
backend/limit/tests/unit/: rate-limit.test.ts
backend/migrations/: 0001_add_public_key_to_users.sql  0002_create_reviews_tables.sql  0003_add_reliability_score.sql  0004_add_used_refresh_tokens.sql  0005_add_reliability_score_to_reputation.sql
backend/services/: audit.ts  bounty.service.ts  corridor-analytics.ts  events.ts  identity-contract.ts  search.ts  stellar-circuit-breaker.ts  tracing.ts
backend/services/api/: .env  .env.example  Cargo.toml  HOOK_SYSTEM_DOCUMENTATION.md  IMPLEMENTATION_CHECKLIST.md  QUICK_START_REQUEST_ID.md  REQUEST_ID_IMPLEMENTATION.md  REQUEST_ID_SUMMARY.md  REVIEW_API_DOCUMENTATION.md  sqlx.toml
backend/services/api/examples/: request_id_usage.rs  review_api_client.js
backend/services/api/migrations/: 20250325000001_create_users_table.sql  20250325000002_create_bounties_table.sql  20250325000003_create_bounty_applications_table.sql  20250325000004_create_escrow_accounts_table.sql  20250325000005_create_freelancer_client_profiles.sql  20250325000006_create_update_timestamp_trigger.sql  20250325000007_create_refresh_tokens_table.sql  20250325000008_add_password_hash_to_users.sql  20260327000000_add_fts_indexes.sql  README.md
backend/services/api/src/: aggregation.rs  alerts.rs  analytics.rs  asset_verifier.rs  auth.rs  config.rs  cqrs_read.rs  cqrs_write.rs  database.rs  errors.rs  event_indexer.rs  lib.rs  main.rs  metrics.rs  middleware.rs  ml.rs  ml_handlers.rs  muxed.rs  reputation.rs  upload.rs  verification_rewards.rs  webhook.rs  webhooks.rs  websocket.rs
backend/services/auth/: Cargo.toml
backend/services/auth/migrations/: 20260325120000_create_refresh_tokens.sql  20260330000000_create_users.sql
backend/services/auth/src/: config.rs  db.rs  error.rs  handlers.rs  main.rs  tokens.rs
backend/services/common/: Cargo.toml
backend/services/common/src/: circuit_breaker.rs  lib.rs  logging.rs
backend/services/discovery/: Cargo.toml
backend/services/discovery/src/: consul.rs  lib.rs  static.rs
backend/services/indexer/: Cargo.toml
backend/services/indexer/src/: config.rs  main.rs
backend/services/notifications/: Cargo.toml  DEPLOYMENT_CHECKLIST.md  IMPLEMENTATION_GUIDE.md  QUICKSTART.md  README.md  notification-center.tsx  notification-logger.ts  notification-service.test.ts  notification-settings-page.tsx  notification-types.ts  notification-validators.ts  package.json.snippets  push-route.ts  push-service.ts  rate-limiter.ts
backend/services/notifications/src/: config.rs  dispatcher.rs  email.rs  error.rs  handlers.rs  main.rs  models.rs  push.rs  queue.rs  sms.rs  worker.rs
backend/src/: listeners.ts  middleware.ts  rateLimit.ts  router.ts  trpc-setup.ts
backend/src/graphql/: context.ts  rate-limit.ts  resolvers.ts  schema.ts
backend/tests/: Cargo.toml  auth_integration.rs  websocket_integration_test.rs
(+1419 files in other folders)
