[workspace]
members = [
    "contracts/bounty",
    "contracts/escrow",
    "contracts/freelancer",
    "contracts/governance",
    "services/api",
    "services/auth",
    "services/notifications",
    "services/indexer",
    "services/discovery",
    "services/common",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.81.0"
authors = ["Stellars Team"]
license = "MIT"

[workspace.dependencies]
# Soroban SDK
soroban-sdk = { version = "23.5.2" }

# Local contract dependencies
stellar-governance-contract = { path = "contracts/governance" }

# Web & HTTP
actix-web = "4.4"
actix-rt = "2.9"
tracing-actix-web = "0.7"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid"] }
redis = { version = "0.25", features = ["tokio-comp"] }
deadpool-redis = "0.15"

# Cryptography
ed25519-dalek = "2.1"
sha2 = "0.10"
hex = "0.4"

# Auth / JWT
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.8"

# Async
async-trait = "0.1"

# Utilities
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
futures = "0.3"
dotenvy = "0.15"

# Metrics
actix-web-prom = "0.9"
prometheus = "0.13"

# Tracing / OpenTelemetry
opentelemetry = { version = "0.24", features = ["metrics", "logs"] }
opentelemetry_sdk = { version = "0.24", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.26", features = ["grpc-tonic"] }
opentelemetry-semantic-conventions = "0.15"
tracing-opentelemetry = "0.25"

# OpenAPI / Swagger
utoipa = { version = "4", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "7", features = ["actix-web"] }
reqwest = { version = "0.12", features = ["json"] }

# Testing
tokio-test = "0.4"
failsafe = "1.3.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.release-contract]
inherits = "release"
opt-level = "z"
strip = true
