[workspace]
members = [
    "contracts/bounty",
    "contracts/escrow",
    "contracts/freelancer",
    "contracts/governance",
    "services/api",
    "services/auth",
    "tests",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.74.0"
authors = ["Stellar Team"]
license = "MIT"
repository = "https://github.com/stellar/stellar-platform"

[workspace.dependencies]
# Soroban SDK
soroban-sdk = "21.7.7"
soroban-spec-tools = "21.5"

# Web & HTTP
actix-web = "4.4"
actix-rt = "2.9"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres"] }
diesel = { version = "2.1", features = ["postgres"] }

# Cryptography & Blockchain
ed25519-dalek = "2.1"
sha2 = "0.10"
hex = "0.4"
stellar-sdk = "21.0"

# Auth
jsonwebtoken = "9"
actix-web-httpauth = "0.8"

# Utilities
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
futures = "0.3"
dotenvy = "0.15"

# Testing
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
