[package]
name = "stellar-auth-integration-tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[[test]]
name = "auth_integration"
path = "auth_integration.rs"

[[test]]
name = "websocket_integration_test"
path = "websocket_integration_test.rs"

[dev-dependencies]
actix-web.workspace = true
actix-rt.workspace = true
actix-ws = "0.3"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
futures = "0.3"
sha2.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
