[package]
name = "stellar-freelancer-contract"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk.workspace = true
stellar-governance-contract = { path = "../governance", workspace = true }

[dev-dependencies]
soroban-sdk = { version = "23.5.2", features = ["testutils"] }
