[package]
name = "stellar-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "stellar-api"
path = "src/main.rs"

[dependencies]
actix-web.workspace = true
actix-cors = "0.7"
tracing-actix-web.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
chrono.workspace = true
dotenvy.workspace = true
futures.workspace = true
jsonwebtoken.workspace = true
redis.workspace = true
uuid.workspace = true
deadpool-redis.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
reqwest.workspace = true
actix-web-prom.workspace = true
prometheus.workspace = true

# Tracing / OpenTelemetry
opentelemetry = { version = "0.24", features = ["metrics", "logs"] }
opentelemetry_sdk = { version = "0.24", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.26", features = ["grpc-tonic"] }
opentelemetry-semantic-conventions = "0.15"
tracing-opentelemetry = "0.25"
stellar-discovery = { path = "../discovery" }
stellar-common = { path = "../common" }
