[package]
name = "stellar-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "stellar-api"
path = "src/main.rs"

[dependencies]
actix-web.workspace = true
actix-cors = "0.7"
actix-rt.workspace = true
actix-web-httpauth.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
futures.workspace = true
jsonwebtoken.workspace = true
hmac = { version = "0.12", features = ["std"] }
sha2.workspace = true
hex.workspace = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
