[package]
name = "stellar-auth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "stellar-auth"
path = "src/main.rs"

[dependencies]
actix-web.workspace = true
tracing-actix-web.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
dotenvy.workspace = true
thiserror.workspace = true
jsonwebtoken.workspace = true
chrono.workspace = true
uuid.workspace = true
rand.workspace = true
sha2.workspace = true
hex.workspace = true
bcrypt = "0.15"
reqwest = { version = "0.12", features = ["json"] }
oauth2 = { version = "4", features = ["reqwest"] }
sqlx = { workspace = true, features = ["migrate", "chrono", "uuid", "postgres", "runtime-tokio-rustls"] }
stellar-discovery = { path = "../discovery" }

# Tracing / OpenTelemetry
opentelemetry = { version = "0.24", features = ["metrics", "logs"] }
opentelemetry_sdk = { version = "0.24", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.26", features = ["grpc-tonic"] }
opentelemetry-semantic-conventions = "0.15"
tracing-opentelemetry = "0.25"
stellar-common = { path = "../common" }
