[package]
name = "stellar-auth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "stellar-auth"
path = "src/main.rs"

[dependencies]
actix-web.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
dotenvy.workspace = true
totp-lite = "2.0"
base32 = "0.4"
qrcode = "0.14"
sha2.workspace = true
hex.workspace = true
thiserror.workspace = true
rand = { version = "0.8", features = ["getrandom"] }
urlencoding = "2.1"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
jsonwebtoken = { version = "9.2", features = ["use_pem"] }
