[package]
name = "stellar-indexer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "stellar-indexer"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true, features = ["full", "time"] }
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
dotenvy.workspace = true
reqwest.workspace = true
stellar-discovery = { path = "../discovery" }

# Tracing / OpenTelemetry
opentelemetry = { version = "0.24", features = ["metrics", "logs"] }
opentelemetry_sdk = { version = "0.24", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.26", features = ["grpc-tonic"] }
opentelemetry-semantic-conventions = "0.15"
tracing-opentelemetry = "0.25"
stellar-common = { path = "../common" }
