[package]
name = "stellar-notifications"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "stellar-notifications"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
dotenvy.workspace = true
thiserror.workspace = true
reqwest.workspace = true

# Email delivery
lettre = { version = "0.11", features = ["tokio1-rustls-tls", "smtp-transport", "hostname"] }
