[package]
name = "stellar-notifications"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "stellar-notifications"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
dotenvy.workspace = true
redis.workspace = true
deadpool-redis.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
futures.workspace = true
reqwest.workspace = true

# HTTP server
actix-web = "4.4"
actix-rt = "2.9"

# Email delivery (consolidated)
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "hostname", "builder"] }

# Configuration
config = "0.14"

# Serialization
toml = "0.8"

# Async traits
async-trait = "0.1"

# Retry logic
backoff = { version = "0.4", features = ["tokio"] }
